// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeRenderer Snapshots CSharp 1`] = `
<pre
  className="sc-AxjAm eKgtDb language-csharp"
>
  <code
    className="language-csharp"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"token keyword\\">class</span> <span class=\\"token class-name\\">Example</span> <span class=\\"token punctuation\\">{</span>
        ctor
        <span class=\\"token punctuation\\">}</span>
        <span class=\\"token keyword\\">class</span> <span class=\\"token class-name\\">Program</span>
        <span class=\\"token punctuation\\">{</span>
            <span class=\\"token keyword\\">static</span> <span class=\\"token return-type class-name\\"><span class=\\"token keyword\\">void</span></span> <span class=\\"token function\\">Main</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span>
            <span class=\\"token punctuation\\">{</span>
            <span class=\\"token punctuation\\">}</span>
        <span class=\\"token punctuation\\">}</span>",
      }
    }
  />
</pre>
`;

exports[`CodeRenderer Snapshots Default break 1`] = `null`;

exports[`CodeRenderer Snapshots Java 1`] = `
<pre
  className="sc-AxjAm eKgtDb language-java"
>
  <code
    className="language-java"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"token keyword\\">public</span> <span class=\\"token keyword\\">class</span> <span class=\\"token class-name\\">MyClass</span> <span class=\\"token punctuation\\">{</span>
                      <span class=\\"token keyword\\">int</span> x <span class=\\"token operator\\">=</span> <span class=\\"token number\\">5</span><span class=\\"token punctuation\\">;</span>
                      <span class=\\"token keyword\\">public</span> <span class=\\"token keyword\\">static</span> <span class=\\"token keyword\\">void</span> <span class=\\"token function\\">main</span><span class=\\"token punctuation\\">(</span><span class=\\"token class-name\\">String</span><span class=\\"token punctuation\\">[</span><span class=\\"token punctuation\\">]</span> args<span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span>
                      <span class=\\"token class-name\\">MyClass</span> myObj <span class=\\"token operator\\">=</span> <span class=\\"token keyword\\">new</span> <span class=\\"token class-name\\">MyClass</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
                      <span class=\\"token class-name\\">System</span><span class=\\"token punctuation\\">.</span>out<span class=\\"token punctuation\\">.</span><span class=\\"token function\\">println</span><span class=\\"token punctuation\\">(</span>myObj<span class=\\"token punctuation\\">.</span>x<span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
                        <span class=\\"token punctuation\\">}</span>
                      <span class=\\"token punctuation\\">}</span>",
      }
    }
  />
</pre>
`;

exports[`CodeRenderer Snapshots JavaScript with codeWrapper 1`] = `
<pre
  className="sc-AxjAm eKgtDb language-javascript"
>
  <pre
    className="sc-AxjAm eKgtDb language-js"
  >
    <code
      className="language-js"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span class=\\"token keyword\\">import</span> React <span class=\\"token keyword\\">from</span> <span class=\\"token string\\">\\"react\\"</span>
        <span class=\\"token keyword\\">class</span> <span class=\\"token class-name\\">MyApp</span> <span class=\\"token keyword\\">extends</span> <span class=\\"token class-name\\">React<span class=\\"token punctuation\\">.</span>Component</span> <span class=\\"token punctuation\\">{</span>
          <span class=\\"token function\\">render</span><span class=\\"token punctuation\\">(</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span>
              <span class=\\"token keyword\\">return</span> <span class=\\"token operator\\">&lt;</span>div<span class=\\"token operator\\">></span>Hello world<span class=\\"token operator\\">!</span><span class=\\"token operator\\">&lt;</span><span class=\\"token operator\\">/</span>div<span class=\\"token operator\\">></span>
          <span class=\\"token punctuation\\">}</span>
        <span class=\\"token punctuation\\">}</span>
        <span class=\\"token keyword\\">export</span> <span class=\\"token keyword\\">default</span> MyApp",
        }
      }
    />
  </pre>
</pre>
`;

exports[`CodeRenderer Snapshots Markup with codeWrapper 1`] = `
<pre
  className="sc-AxjAm eKgtDb language-markup"
>
  <pre
    className="sc-AxjAm eKgtDb language-markup"
  >
    <code
      className="language-markup"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span class=\\"token doctype\\">&lt;!DOCTYPE HTML></span>
          <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>html</span> <span class=\\"token attr-name\\">lang</span> <span class=\\"token attr-value\\"><span class=\\"token punctuation\\">=</span> <span class=\\"token punctuation\\">\\"</span>en<span class=\\"token punctuation\\">\\"</span></span><span class=\\"token punctuation\\">></span></span>
          <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>head</span><span class=\\"token punctuation\\">></span></span>
            <span class=\\"token comment\\">&lt;!-- basic.html --></span>
            <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>title</span><span class=\\"token punctuation\\">></span></span>basic.html<span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>title</span><span class=\\"token punctuation\\">></span></span>
            <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>meta</span> <span class=\\"token attr-name\\">charset</span> <span class=\\"token attr-value\\"><span class=\\"token punctuation\\">=</span> <span class=\\"token punctuation\\">\\"</span>UTF-8<span class=\\"token punctuation\\">\\"</span></span> <span class=\\"token punctuation\\">/></span></span>
          <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>head</span><span class=\\"token punctuation\\">></span></span>
          <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>body</span><span class=\\"token punctuation\\">></span></span>
            <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>h1</span><span class=\\"token punctuation\\">></span></span>Level One Headline<span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>h1</span><span class=\\"token punctuation\\">></span></span>
            <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>p</span><span class=\\"token punctuation\\">></span></span>
              This is a paragraph.
              Note that the text is automatically wrapped.
            <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>p</span><span class=\\"token punctuation\\">></span></span>
          <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>body</span><span class=\\"token punctuation\\">></span></span>
          <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>html</span><span class=\\"token punctuation\\">></span></span>",
        }
      }
    />
  </pre>
</pre>
`;
